--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -33,7 +33,8 @@
 */
 
 // Define base and accent colors
-$base-color: #3498db;
+//$base-color: #3498db;
+$base-color: #9EE11D;
 $base-color-hover: darken($base-color, 10%);
 
 // Define background colors
